# azalea

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DEBUG.md  Dockerfile  Justfile  LEGAL.md  README.md  azalea.config.toml  azalea.schema.json  cliff.toml  skills-lock.json
.agents/skills/cargo-workflows/: SKILL.md
.agents/skills/cargo-workflows/references/: workspace-patterns.md
.agents/skills/debug-hypothesis/: SKILL.md
.agents/skills/ffmpeg/: SKILL.md
.agents/skills/rust-async-internals/: SKILL.md
.agents/skills/rust-build-times/: SKILL.md
.agents/skills/rust-unsafe/: SKILL.md
.agents/skills/rust-unsafe/references/: unsafe-patterns.md
.agents/skills/rustc-basics/: SKILL.md
.agents/skills/rustc-basics/references/: rustflags-profiles.md
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  ci_release.yml  release.yml
azalea/: Cargo.toml
azalea-core/: Cargo.toml
azalea-core/src/: config.rs  engine.rs  lib.rs
azalea-core/src/concurrency/: mod.rs  permits.rs
azalea-core/src/media/: mod.rs  tempfile.rs  url.rs
azalea-core/src/pipeline/: disk.rs  download.rs  errors.rs  ffmpeg.rs  mod.rs  optimize.rs  probe.rs  process.rs  quality.rs  resolve.rs  ssrf.rs  types.rs
azalea-core/src/storage/: dedup.rs  metrics.rs  mod.rs
azalea-core/tests/: smoke.rs
azalea/src/: app.rs  config.rs  ids.rs  main.rs  shutdown.rs
azalea/src/concurrency/: mod.rs  ratelimit.rs
azalea/src/discord/: commands.rs  mod.rs  responder.rs
azalea/src/gateway/: dispatch.rs  event.rs  mod.rs  resume.rs
azalea/src/pipeline/: mod.rs  upload.rs
