[package]
name = "azalea-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[features]
schemars = ["dep:schemars"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
regex = "1.12.3"
smallvec = "1.15.1"
tracing = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
    "time",
] }
