[package]
name = "azalea-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[features]
schemars = ["dep:schemars"]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = "0.3"
schemars = { workspace = true, optional = true }
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = [
    "brotli",
    "deflate",
    "gzip",
    "json",
    "rustls",
    "http2",
    "stream",
] }
smallvec = "1.15.1"
tracing = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "process",
    "sync",
    "time",
] }
dashmap = "6"
moka = { workspace = true }
redb = "3.1.0"
nix = { version = "0.31.0", default-features = false, features = [
    "fs",
    "signal",
    "process",
] }

[dev-dependencies]
proptest = { workspace = true }
