[package]
name = "azalea"
version = "0.3.0"
edition = { workspace = true }
license = { workspace = true }
default-run = "azalea"

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"
required-features = ["schemars"]

[[bin]]
name = "generate-config"
path = "src/bin/generate_config.rs"

[lints]
workspace = true

[features]
schemars = ["dep:schemars", "azalea-core/schemars"]

[dependencies]
anyhow = { workspace = true }
azalea-core = { path = "../azalea-core" }
figment = { version = "0.10", features = ["toml"] }
mimalloc = "0.1.48"
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true, optional = true }
tokio = { workspace = true, features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
    "sync",
    "time",
] }
tokio-util = { version = "0.7", default-features = false, features = [
    "rt",
    "io",
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "json",
] }
twilight-gateway = { version = "0.17", default-features = false, features = [
    "rustls-native-roots",
    "zlib",
] }
twilight-http = { version = "0.17", default-features = false, features = [
    "rustls-native-roots",
] }
twilight-model = { version = "0.17", default-features = false }
twilight-util = { version = "0.17", default-features = false, features = [
    "builder",
] }
nix = { version = "0.31.0", default-features = false, features = ["resource"] }
which = "8.0.0"

[dev-dependencies]
proptest = { workspace = true }
